<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewClaimActivity">

    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="506dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/new_claim_activity_title"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/new_claim_action_message"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/new_claim_claim_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/new_claim_claim_title"
            android:ems="10"
            android:hint="@string/new_claim_claim_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/new_claim_plate_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/new_claim_plate_number"
            android:ems="10"
            android:hint="@string/new_claim_plate_number"
            android:inputType="text" />

        <EditText
            android:id="@+id/new_claim_occurrence_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/new_claim_occurrence_date"
            android:ems="10"
            android:hint="@string/new_claim_occurrence_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/new_claim_description"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/new_claim_description"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/new_claim_description"
            android:inputType="textMultiLine" />

        <LinearLayout
            style="buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_claim_btn_cancel"
                style="buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_claim_btn_cancel" />

            <Button
                android:id="@+id/new_claim_btn_submit"
                style="buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_claim_btn_submit" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>