<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_user_name"
            android:inputType="textPersonName"
            android:autofillHints="@string/login_user_name" />

        <EditText
            android:id="@+id/login_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_user_password"
            android:inputType="textPassword"
            android:autofillHints="@string/login_user_password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:text="@string/login_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:gravity="center"
            android:text="@string/login_slogan"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>