<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainPageActivity">

    <Button
        android:id="@+id/main_page_logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"
        android:drawableLeft="@android:drawable/ic_lock_power_off"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/main_page_logout_button"
        android:textColor="#171515"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewMainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_logo_description"
            android:scaleType="fitXY"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/logo_blue" />

        <TextView
            android:id="@+id/main_page_hello_message"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:gravity="center"
            android:text="@string/main_page_hello_message"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:gravity="center"
            android:text="@string/main_page_need_message"
            android:textSize="18sp" />

        <Button
            android:id="@+id/main_page_my_information_button"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/main_page_my_information_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/main_page_new_claim_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/main_page_new_claim_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/main_page_my_claims_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/main_page_my_claims_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>