<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyClaimsActivity">

    <LinearLayout
        android:layout_width="293dp"
        android:layout_height="531dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/my_claims"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/my_claims_list"
            android:layout_width="match_parent"
            android:layout_height="337dp"
            android:layout_marginBottom="30dp"
            android:background="#BCD0D3"
            android:cacheColorHint="#8E8686"
            android:scrollingCache="false"
            android:visibility="visible"
            tools:listitem="@android:layout/simple_selectable_list_item">

        </ListView>

        <Button
            android:id="@+id/my_claims_list_button"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:text="@string/my_claims_list_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>